# routes/api.php
@@ -38,7 +38,6 @@ Route::group([
     Route::post('refresh', [AuthController::class, 'refresh']);
 
     Route::post('me', [AuthController::class, 'me']);
-    Route::get('user', [UserController::class, 'index']);
 
     Route::group([
         'middleware' => 'jwt.auth', 
