# storage/api-docs/api-docs.json
@@ -198,192 +198,6 @@
                 ]
             }
         },
-        "/api/user": {
-            "get": {
-                "summary": "Get example data",
-                "operationId": "9e3172c1b7461a2eb7c57309581c18a8",
-                "responses": {
-                    "200": {
-                        "description": "Successful operation"
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            }
-        },
-        "/api/book/create": {
-            "post": {
-                "tags": [
-                    "Book"
-                ],
-                "summary": "Create Book",
-                "operationId": "d69c2a15b0da43a99a0902cbea41cd9f",
-                "parameters": [
-                    {
-                        "name": "book_name",
-                        "in": "query",
-                        "description": "Name of the book",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "book_summary",
-                        "in": "query",
-                        "description": "Book Summary",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "book_description",
-                        "in": "query",
-                        "description": "Book Description",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "number_of_pages",
-                        "in": "query",
-                        "description": "Number of pages",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "published_year",
-                        "in": "query",
-                        "description": "Published Year",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Successful operation"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            }
-        },
-        "/api/book/show/{book}": {
-            "get": {
-                "tags": [
-                    "Book"
-                ],
-                "summary": "Show Book",
-                "operationId": "baaaaaff12fdd1d2bde2086f5d64678a",
-                "parameters": [
-                    {
-                        "name": "book",
-                        "in": "path",
-                        "description": "Book ID",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Successful operation"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            }
-        },
-        "/api/book/list/all": {
-            "get": {
-                "tags": [
-                    "Book"
-                ],
-                "summary": "Show All Books",
-                "operationId": "9f7787bd66497e01bfe22eac2b77e8ff",
-                "responses": {
-                    "201": {
-                        "description": "Successful operation"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            }
-        },
-        "/api/book/list/mine": {
-            "get": {
-                "tags": [
-                    "Book"
-                ],
-                "summary": "Show my Books",
-                "operationId": "e1606193730f03361dcb1f557e1a0ec5",
-                "responses": {
-                    "201": {
-                        "description": "Successful operation"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            }
-        },
         "/api/package/list/all": {
             "get": {
                 "tags": [
